[package]
name = "tenki_slack_post"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
chrono = "0.4"
clap = "2.33"
image = "0.23"
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
slack = "0.25"
tempfile = "3"
tokio = { version = "1.10", features = ["full"] }